[package]
name = "nylon-node"
version = "0.0.1-dev"
description = "A FRAME-based Substrate node for the Nylon network."
authors = ["Nylon Network <https://github.com/nylon-network>"]
homepage = "https://nylon.network/"
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/nylon-network/nylon-node/"

# this declaration tells cargo where to bootstrap the build from
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "nylon-node"

[dependencies]

# Local Dependencies
nylon-runtime = { version = "0.0.1-dev", path = "../runtime" }

clap = { version = "3.1.18", features = ["derive"] }

sc-cli = { git = "https://github.com/paritytech/substrate", package = "sc-cli", features = ["wasmtime"] }
sp-core = { git = "https://github.com/paritytech/substrate", package = "sp-core" }
sc-executor = { git = "https://github.com/paritytech/substrate", package = "sc-executor", features = ["wasmtime"] }
sc-service = { git = "https://github.com/paritytech/substrate", package = "sc-service", features = ["wasmtime"] }
sc-telemetry = { git = "https://github.com/paritytech/substrate", package = "sc-telemetry" }
sc-keystore = { git = "https://github.com/paritytech/substrate", package = "sc-keystore" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", package = "sc-transaction-pool" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", package = "sc-transaction-pool-api" }
sc-consensus-aura = { git = "https://github.com/paritytech/substrate", package = "sc-consensus-aura" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", package = "sp-consensus-aura" }
sp-consensus = { git = "https://github.com/paritytech/substrate", package = "sp-consensus" }
sc-consensus = { git = "https://github.com/paritytech/substrate", package = "sc-consensus" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", package = "sc-finality-grandpa" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", package = "sp-finality-grandpa" }
sc-client-api = { git = "https://github.com/paritytech/substrate", package = "sc-client-api" }
sp-runtime = { git = "https://github.com/paritytech/substrate", package = "sp-runtime" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", package = "sp-timestamp" }
sp-inherents = { git = "https://github.com/paritytech/substrate", package = "sp-inherents" }
sp-keyring = { git = "https://github.com/paritytech/substrate", package = "sp-keyring" }
frame-system = { git = "https://github.com/paritytech/substrate", package = "frame-system" }
pallet-transaction-payment = { default-features = false, git = "https://github.com/paritytech/substrate", package = "pallet-transaction-payment" }

# These dependencies are used for the Nylon node's RPCs
jsonrpc-core = "18.0.0"
jsonrpsee = { version = "0.13.0", features = ["server"] }
sc-rpc = { git = "https://github.com/paritytech/substrate", package = "sc-rpc" }
sp-api = { git = "https://github.com/paritytech/substrate", package = "sp-api" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", package = "sc-rpc-api" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", package = "sp-blockchain" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", package = "sp-block-builder" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", package = "sc-basic-authorship" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", package = "substrate-frame-rpc-system" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", package = "pallet-transaction-payment-rpc" }
pallet-contracts-rpc = { git = "https://github.com/paritytech/substrate", package = "pallet-contracts-rpc" }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { git = "https://github.com/paritytech/substrate", package = "frame-benchmarking" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", package = "frame-benchmarking-cli" }

# CLI-specific dependencies
try-runtime-cli = { optional = true, git = "https://github.com/paritytech/substrate", package = "try-runtime-cli" }

[build-dependencies]
substrate-build-script-utils = { it = "https://github.com/paritytech/substrate", package = "substrate-build-script-utils" }

[features]
default = []
runtime-benchmarks = ["nylon-runtime/runtime-benchmarks"]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.
try-runtime = ["nylon-runtime/try-runtime", "try-runtime-cli"]
