[package]
name = "pallet-nylon"
version = "0.0.1-dev"
description = "The Nylon FRAME pallet defining runtime logic."
authors = ["Nylon Network <https://github.com/nylon-network>"]
homepage = "https://nylon.network/"
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/nylon-network/nylon-node/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", package = "frame-support" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", package = "frame-system" }
frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/substrate.git", optional = true, package = "frame-benchmarking" }

[dev-dependencies]
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", package = "sp-core" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate.git", package = "sp-io" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", package = "sp-runtime" }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
]

runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
